[gd_scene load_steps=6 format=3 uid="uid://bwv1hf7b5avj3"]

[ext_resource type="Script" path="res://tower.gd" id="1_h5wei"]
[ext_resource type="Texture2D" uid="uid://cqgn3ve0hqaj7" path="res://sprites/buildings/tower-wooden-1.png" id="2_v10ao"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6kmlq"]
radius = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d8nrb"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sjdxr"]
radius = 30.0

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_h5wei")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_v10ao")
offset = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(1, 1, 1, 0.333333)
position = Vector2(-6, -13)
shape = SubResource("CircleShape2D_6kmlq")
debug_color = Color(1, 1, 1, 0.419608)

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
show_behind_parent = true
position = Vector2(-6, -13)
radius = 35.0

[node name="AttackArea" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0.345098)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="AttackRange" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_d8nrb")

[node name="BuilderArea" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0.341176)
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="BuilderRange" type="CollisionShape2D" parent="BuilderArea"]
position = Vector2(-6, -12)
shape = SubResource("CircleShape2D_sjdxr")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 22.0
offset_top = -100.0
offset_right = 26.0
offset_bottom = -73.0

[node name="LaunchMarker" type="Marker2D" parent="."]
position = Vector2(4, -62)

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
[connection signal="area_entered" from="BuilderArea" to="." method="_on_builder_area_area_entered"]
